SERVER-93076  Make decoration alignment calculation should consider internal backlink pointer (#25805)

GitOrigin-RevId: 5ea7b5ef256094b1c36d984a9ef683195df2c1ad